Fix parallax & overflow issue

--- a/src/sections/1-home-section/Home.scss
+++ b/src/sections/1-home-section/Home.scss
@@ -1,27 +1,46 @@
 @import '../../index.scss';
 @import '../../global/mixins.scss';
 
+html, body {
+  overflow-x: hidden;
+  height: 100%;
+  box-sizing: border-box
+}
+
 .home-section{
   @include sectionLayout;
   background: linear-gradient(to bottom, #ffffff 70%, #040707 30%);
   background: transparent;
-  height: 100vh !important;
-  width: 100vw !important;
+  max-height: 100vh !important;
+  max-width: 100vw !important;
   box-sizing: border-box;
 
   .para-container{
-    // min-height: 100vh;
-    height: 100% !important;
+    position: relative;
     display: grid;
     grid-template-areas: "stack";
-    position: relative;
+    max-height: 100vh;
     contain: paint;
+    // overflow: hidden;
+    box-sizing: border-box;
+
+
+     .para {
+      // width: 10vw !important;
+      width: calc(100vw - 8px) !important;
+      grid-area: stack !important;
+      animation: parallax linear;
+      animation-timeline: scroll();
+      height: 100vh;
+
+    }
 
     .hero-wrapper{
       display: flex;
       width: 100%;
       height: 100%;
       position: relative;
+
 
       #landing-hero-text,
       #landing-sub-text{
@@ -39,18 +58,16 @@
         animation-timeline: scroll();
         z-index: -1 !important;
       }
-  
+
       #landing-sub-text{
-        top: clamp(80px,6dvw, 6vw);
+        top: clamp(80px, 6vw, 130px);
         font-size: clamp(16px, 3vw, 1.5rem) !important;
         color: #B2CC85;
         --para-speed: 22;
-        
       }
 
       #landing-hero-text{
         position: relative;
-
 
         .scroll-down-icon{
           position: absolute;
@@ -62,53 +79,25 @@
 
           cursor: pointer;
         }
-
-
       }
     }
 
     #img-1{
       height: 101%;
-      width: calc(100vw - 8px);
-      --para-speed: 4;
-      z-index: 0;
     }
-    #img-2{
-      width: calc(100vw - 8px);
-      --para-speed: 5;
-      z-index: 0;
-    }
-    #img-3{
-      width: calc(100vw - 8px);
-      --para-speed: 9;
-      z-index: 0;
-    }
-    #img-4{
-      width: calc(100vw - 8px);
-      --para-speed: 14;
-      z-index: 0;
-    }
+    #img-1,
+    #img-2,
+    #img-3,
+    #img-4,
     #img-5{
-      width: calc(100vw - 8px);
-      --para-speed: 17;
       z-index: 0;
     }
 
-    .para{
-      grid-area: stack;
-      width: 100%;
-      height: 100%;
-
-      user-select: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-
-
-      animation: parallax linear;
-      animation-timeline: scroll();
-      z-index: -1 !important;
-    }
+    #img-1 { --para-speed: 4; }
+    #img-2 { --para-speed: 5; }
+    #img-3 { --para-speed: 9; }
+    #img-4 { --para-speed: 14; }
+    #img-5 { --para-speed: 17; }
   }
 }
 
@@ -123,92 +112,35 @@
   }
 }
 
-
-@media screen and (min-width: 600px) and (max-width: 800px){
-  html{
-    overflow-x: hidden;
-  }
+@media screen and (min-width: 600px) and (max-width: 800px) {
   .home-section{
     .para-container{
-      #img-1{
-        height: 101%;
-        width: 100vw;
-        --para-speed: 4;
-        z-index: 0;
-      }
-      #img-2{
-        width: 100vw;
-        --para-speed: 5;
-        z-index: 0;
-      }
-      #img-3{
-        width: 100vw;
-        --para-speed: 9;
-        z-index: 0;
-      }
-      #img-4{
-        width: 100vw;
-        --para-speed: 14;
-        z-index: 0;
-      }
-      #img-5{
-        width: 100vw;
-        --para-speed: 17;
-        z-index: 0;
+      #img-1, #img-2, #img-3, #img-4, #img-5{
+        // width: 100vw;
       }
       .hero-wrapper{
         #landing-hero-text{
-          // top: clamp(100px,5dvw, 5vw);
           top: 40px;
         }
         #landing-sub-text{
-          // top: clamp(150px,5dvw, 5vw);
           top: 30px;
         }
       }
     }
   }
 }
-@media screen and (max-width: 600px){
-  html{
-    overflow-x: hidden;
-  }
+
+@media screen and (max-width: 600px) {
   .home-section{
     .para-container{
-
-      #img-1{
-        height: 101%;
-        width: 100vw;
-        --para-speed: 4;
-        z-index: 0;
-      }
-      #img-2{
-        width: 100vw;
-        --para-speed: 5;
-        z-index: 0;
-      }
-      #img-3{
-        width: 100vw;
-        --para-speed: 9;
-        z-index: 0;
-      }
-      #img-4{
-        width: 100vw;
-        --para-speed: 14;
-        z-index: 0;
-      }
-      #img-5{
-        width: 100vw;
-        --para-speed: 17;
-        z-index: 0;
+      #img-1, #img-2, #img-3, #img-4, #img-5{
+        // width: 100vw;
       }
       .hero-wrapper{
         #landing-hero-text{
-          // top: clamp(100px,5dvw, 5vw);
           top: 50px;
         }
         #landing-sub-text{
-          // top: clamp(150px,5dvw, 5vw);
           top: 45px;
         }
       }
